src/objects/Artifact__c.object
<CustomObject>
    <description>Artifacts used to support Framework Certifications.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Artifact_URL__c</fullName>
        <label>External Artifact URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Participation_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participation Number</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>Artifacts</relationshipLabel>
        <relationshipName>Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participation_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Participation__c</referenceTo>
        <relationshipLabel>Artifacts</relationshipLabel>
        <relationshipName>Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Party</label>
        <referenceTo>Third_Party__c</referenceTo>
        <relationshipLabel>Artifacts</relationshipLabel>
        <relationshipName>Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Non-HR</fullName>
                </value>
                <value>
                    <fullName>HR and Non-HR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isCurrent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Current Artifact</label>
        <type>Checkbox</type>
    </fields>
    <label>Artifact</label>
    <nameField>
        <label>Artifact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artifacts</pluralLabel>
    <recordTypes>
        <fullName>Privacy_Policy</fullName>
        <active>true</active>
        <label>Privacy Policy</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>